# ColPali-Workbench

./: .gitignore  README.md  docker-compose.yml
colpali-api/: Dockerfile  Readme.md  pyproject.toml
colpali-api/app/: config.py  main.py
colpali-api/app/routes/files/: files.py
colpali-api/app/services/gcloud/: gbucketClient.py  llamaClient.py  vertexClient.py
colpali-api/app/services/gcloud/response_cache/: query_last_response.json
colpali-api/app/services/vespa/: vespaClient.py
colpali-api/app/utils/: logger.py
colpali-deployments/: README.md
colpali-deployments/vertex-deployment/: Dockerfile  cloudbuild.yaml  pyproject.toml
colpali-deployments/vertex-deployment/app/: main.py
colpali-deployments/vertex-deployment/app/utils/: predictor.py
colpali-ui/: Dockerfile  README.md  package-lock.json  package.json
colpali-ui/public/: index.html  manifest.json
colpali-ui/src/: App.css  App.js
