[tool.poetry]
name = "colpali-vertex-deployment"
version = "0.1.0"
description = "Fast API application for Vertex deployment"
authors = ["kefio <alessandro.kayed@gmail.com>, mrpsycox <simone.silv@yahoo.com>"]
license = "MIT"
#package-mode = false

[tool.poetry.dependencies]
python = ">=3.10"
fastapi = "0.111.0"
colpali-engine = "0.3.5"
uvicorn = "^0.30.0"
pdf2image = "1.17.0"
pypdf = "5.1.0"
requests = "2.32.3"
numpy = "1.26.4"

[tool.poetry.dev-dependencies]
pytest = "^7.4"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.7"
pre-commit = "^3.7.1"
locust = "^2.28.0"
mypy = "1.11.0"

[tool.ruff]
line-length = 120
indent-width = 2
exclude = ["tests", "app/templates"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "F"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
exclude = ["\\.venv"]
